--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Henry Dunn │ Dev</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <!-- Preloader -->
+    <div class="wrapper">
+        <div class="loader"></div>
+    </div>
 </body>
+<script src="javascript.js"></script>
 </html>
