--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="pagescontainer">
+        <section class="page1">
+            <div>page 1</div>
+        </section>
+        <section class="page2">
+            <div>page 2</div>
+        </section>
+        <section class="page3">
+            <div>page 3</div>
+        </section>
+        <section class="page4">
+            <div>page 4</div>
+        </section>
+    </div>
     <!-- Preloader -->
     <div class="wrapper">
         <div class="loader"></div>
