--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- <div class="background">dsda</div> -->
+    <div class="container">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <div class="pagescontainer">
         <section class="page1">
-            <div>page 1</div>
+            <div></div>
         </section>
         <section class="page2">
             <div>page 2</div>
