--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- <div class="background">dsda</div> -->
+    <div class="background"></div>
     <div class="container">
         <div></div>
         <div></div>
