--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <section class="background"></section>
     <div class="pagescontainer">
         <section class="page1">
-            <div></div>
+            <div>01</div>
         </section>
         <section class="page2">
-            <div>page 2</div>
+            <div>02</div>
         </section>
         <section class="page3">
-            <div>page 3</div>
+            <div>03</div>
         </section>
         <section class="page4">
-            <div>page 4</div>
+            <div>04</div>
         </section>
     </div>
     <!-- Preloader -->
