--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 <body>
     <section class="background"></section>
     <div class="pagescontainer">
-        <section class="page1">
-            <div>01</div>
+        <section class="page">
+            <div class="page1">01</div>
+            <div class="pagetitle">pt1</div>
         </section>
-        <section class="page2">
-            <div>02</div>
+        <section class="page">
+            <div class="page2">02</div>
+            <div class="pagetitle">pt2</div>
         </section>
-        <section class="page3">
-            <div>03</div>
+        <section class="page">
+            <div class="page3">03</div>
+            <div class="pagetitle">pt3</div>
         </section>
-        <section class="page4">
-            <div>04</div>
+        <section class="page">
+            <div class="page4">04</div>
+            <div class="pagetitle">pt4</div>
         </section>
     </div>
     <!-- Preloader -->
