testing push pc

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <section class="background"></section>
     <div class="pagescontainer">
         <section class="page">
-            <div class="page1">01</div>
+            <div class="page1 pagenum">01</div>
             <div class="pagetitle">pt1</div>
         </section>
         <section class="page">
-            <div class="page2">02</div>
+            <div class="page2 pagenum">02</div>
             <div class="pagetitle">pt2</div>
         </section>
         <section class="page">
-            <div class="page3">03</div>
+            <div class="page3 pagenum">03</div>
             <div class="pagetitle">pt3</div>
         </section>
         <section class="page">
-            <div class="page4">04</div>
+            <div class="page4 pagenum">04</div>
             <div class="pagetitle">pt4</div>
         </section>
     </div>
