--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <section class="background"></section>
     <div class="pagescontainer">
         <section class="page">
-            <div class="page1 pagenum">01</div>
-            <div class="pagetitle">pt1</div>
+            <div class="pagenumcont">
+                <div class="page1 pagenum">01</div>
+            </div>
+            <div class="pagetitle">AB0UT</div>
         </section>
         <section class="page">
             <div class="page2 pagenum">02</div>
-            <div class="pagetitle">pt2</div>
+            <div class="pagetitle">FRONTEND</div>
         </section>
         <section class="page">
             <div class="page3 pagenum">03</div>
-            <div class="pagetitle">pt3</div>
+            <div class="pagetitle">DESIGN</div>
         </section>
         <section class="page">
             <div class="page4 pagenum">04</div>
-            <div class="pagetitle">pt4</div>
+            <div class="pagetitle">ENGINEERING</div>
         </section>
     </div>
     <!-- Preloader -->
