testing small nums

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
             <div class="pagenumcont">
                 <div class="page1 pagenum">01</div>
             </div>
-            <div class="pagetitle">AB0UT</div>
         </section>
         <section class="page">
-            <div class="page2 pagenum">02</div>
-            <div class="pagetitle">FRONTEND</div>
+            <div class="pagenumcont">
+                <div class="page2 pagenum">02</div>
+            </div>
         </section>
         <section class="page">
-            <div class="page3 pagenum">03</div>
-            <div class="pagetitle">DESIGN</div>
+            <div class="pagenumcont">
+                <div class="page3 pagenum">03</div>
+            </div>
         </section>
         <section class="page">
-            <div class="page4 pagenum">04</div>
-            <div class="pagetitle">ENGINEERING</div>
+            <div class="pagenumcont">
+                <div class="page4 pagenum">04</div>
+            </div>
         </section>
     </div>
     <!-- Preloader -->
