--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="background"></section>
+    <canvas id="canvas" width="32" height="32"></canvas>
     <div class="pagescontainer">
         <section class="page">
             <div class="pagenumcont">
