--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <canvas id="canvas" width="32" height="32"></canvas>
-    <div class="pagescontainer">
-        <section class="page">
-            <div class="pagenumcont">
-                <div class="page1 pagenum">01</div>
-            </div>
-        </section>
-        <section class="page">
-            <div class="pagenumcont">
-                <div class="page2 pagenum">02</div>
-            </div>
-        </section>
-        <section class="page">
-            <div class="pagenumcont">
-                <div class="page3 pagenum">03</div>
-            </div>
-        </section>
-        <section class="page">
-            <div class="pagenumcont">
-                <div class="page4 pagenum">04</div>
-            </div>
-        </section>
-    </div>
+    <div class="indexcont">
+    <canvas id="canvas" width="10" height="32"></canvas>
+        <div class="pagescontainer">
+            <section class="page">
+                <div class="pagenumcont">
+                    <div class="page1 pagenum">01</div>
+                </div>
+            </section>
+            <section class="page">
+                <div class="pagenumcont">
+                    <div class="page2 pagenum">02</div>
+                </div>
+            </section>
+            <section class="page">
+                <div class="pagenumcont">
+                    <div class="page3 pagenum">03</div>
+                </div>
+            </section>
+            <section class="page">
+                <div class="pagenumcont">
+                    <div class="page4 pagenum">04</div>
+                </div>
+            </section>
+        </div>
+        </div>
     <!-- Preloader -->
     <div class="wrapper">
         <div class="loader"></div>
