--- a/index.html
+++ b/index.html
@@ -11,24 +11,20 @@
     <div class="indexcont">
     <canvas id="canvas" width="10" height="32"></canvas>
         <div class="pagescontainer">
+
             <section class="page">
-                <div class="pagenumcont">
-                    <div class="page1 pagenum">01</div>
+                <div class="pagetitlecont">
+                    <div class="page1 pagetitle">ABOUT</div>
                 </div>
             </section>
             <section class="page">
-                <div class="pagenumcont">
-                    <div class="page2 pagenum">02</div>
+                <div class="pagetitlecont">
+                    <div class="page2 pagetitle">FRONTEND</div>
                 </div>
             </section>
             <section class="page">
-                <div class="pagenumcont">
-                    <div class="page3 pagenum">03</div>
-                </div>
-            </section>
-            <section class="page">
-                <div class="pagenumcont">
-                    <div class="page4 pagenum">04</div>
+                <div class="pagetitlecont">
+                    <div class="page3 pagetitle">MECHANICAL</div>
                 </div>
             </section>
         </div>
