--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="main">
+        <div class="container">
+        </div>
+      </div>
     <div class="indexcont">
     <canvas id="canvas" width="10" height="32"></canvas>
         <div class="pagescontainer">
